# HandsOff

./: .coderabbit.yaml  .gitignore  .gitleaks.toml  .mcp.json  .prettierignore  AGENTS.md  CLAUDE.md  FINAL_PLANNING.md  PLANNING.md  PORTING.md  README.md  deny.toml  eslint.config.mjs  justfile  knip.json  lefthook.yml  package.json  pnpm-lock.yaml  rust-toolchain.toml  tsconfig.base.json  tsconfig.json  vitest.workspace.ts
.codex/: config.toml
.cursor/: mcp.json
.github/: pull_request_template.md
.github/workflows/: ci.yml  desktop-artifact.yml  pr-link-check.yml  quality-gate.yml
HANDOFFS/: 2026-06-22-2330-gesture-epic-push-split.md
apps/desktop/: .gitignore  README.md  RELEASE.md  THIRD_PARTY_NOTICES.md  index.html  package.json  tsconfig.json  vite.config.ts  vitest-setup.ts
apps/desktop/public/wasm/: vision_wasm_internal.js  vision_wasm_module_internal.js  vision_wasm_nosimd_internal.js
apps/desktop/scripts/: macos-release-dry-run.mjs  setup-mediapipe-assets.mjs
apps/desktop/src/: App.tsx  index.css  main.tsx  vite-env.d.ts
apps/desktop/src-tauri/: .gitignore  Cargo.toml  Info.plist  build.rs  entitlements.plist  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/sidecars/: build.sh
apps/desktop/src-tauri/sidecars/gesture-overlay/: DotView.swift  Info.plist  OverlayController.swift  OverlayGeometry.swift  main.swift
apps/desktop/src-tauri/sidecars/head-track/: ConfigControl.swift  DebugPreview.swift  FaceTrackingModel.swift  Geometry.swift  HeadTrackSelfTest.swift  HeadTracker.swift  Info.plist  Overlay.swift  VisionLandmarks.swift  WireEvents.swift  main.swift
apps/desktop/src-tauri/sidecars/stt-ondevice/: Info.plist  main.swift
apps/desktop/src-tauri/src/: hotkey_tap.m  main.rs  native_permissions.m  speechanalyzer_bridge.swift
apps/desktop/src-tauri/src/commands/: bridge.rs  cua.rs  cua_brain.rs  cua_pixel.rs  gesture_overlay.rs  head_track.rs  hotkey.rs  intent.rs  lifecycle.rs  mod.rs  observability.rs  overlay.rs  permissions.rs  readiness.rs  storage.rs  stt.rs  stt_ondevice.rs
apps/desktop/src-tauri/src/commands/head_track/: candidates.rs  event.rs
apps/desktop/src/components/: EmptyPanel.tsx
apps/desktop/src/lib/: tauri.ts
apps/sidecar/DirectorSidecar/: .gitignore  Config.xcconfig  Local.xcconfig.example  ONBOARDING-PLAN.md  right-edge-rail-spec.md
apps/sidecar/DirectorSidecar/DirectorSidecar/: BridgeClient.swift  BridgeTypes.swift  ContentView.swift  DirectorSidecar.entitlements  DirectorSidecarApp.swift
apps/sidecar/DirectorSidecar/DirectorSidecar.xcodeproj/: project.pbxproj
workers/agent-replay/: package.json  wrangler.jsonc
workers/agent-replay/src/: index.test.ts  index.ts
workers/assemblyai-token/: README.md  package.json  tsconfig.json  wrangler.jsonc
workers/assemblyai-token/src/: index.test.ts  index.ts
workers/email-capture/: README.md  package.json  wrangler.jsonc
workers/email-capture/migrations/: 0001_subscribers.sql
workers/email-capture/src/: index.test.ts  index.ts
workers/llm-intent/: README.md  package.json  wrangler.jsonc
workers/llm-intent/src/: index.test.ts  index.ts
(+398 files in other folders)
