[package]
name = "handsoff"
version = "0.0.0"
description = "HandsOff — multimodal desktop control plane for agent supervision"
authors = ["HandsOff team"]
edition = "2021"
publish = false

# The Tauri shell for HandsOff. Frontend lives in ../ (Vite + React); this crate
# only opens the dashboard window and loads it. Area lanes (CUA, readiness,
# storage) add commands in their own issues — placeholders stay un-wired here.

[build-dependencies]
cc = "1"
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-shell = "2"
tauri-plugin-global-shortcut = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ureq = { version = "2", features = ["json"] }
url = "2"

# Director engine bridge (G0): loopback WebSocket server for the native Swift sidecar.
# Versions hardened by adversarial review — see HandsOff-Knowledge/docs/director-bridge-contract.md.
tokio = { version = "1", features = ["net", "rt"] }
tokio-tungstenite = "=0.24.0" # pin: 0.26 switches Message::Text String->Utf8Bytes, breaking the handler
futures-util = { version = "0.3", default-features = false, features = ["std", "sink"] }

[features]
# Keep parity with the Tauri template's custom-protocol toggle.
custom-protocol = ["tauri/custom-protocol"]

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-global-shortcut = "2"
